# csg

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/csg_core/: CMakeLists.txt
lib/csg_core/include/csg/: core.h
lib/csg_core/src/: c_camera.c  c_geometry.c  c_linalgebra.c  c_malloc.c  c_material.c  c_node.c  c_render.c  c_shader.c  c_texture.c  c_transform.c  internal.h
lib/csg_gui/: CMakeLists.txt
lib/csg_gui/include/csg/: gui.h  nuklear.h
lib/csg_gui/src/: c_adapter.c
lib/csg_gui_glfw3/: CMakeLists.txt
lib/csg_gui_glfw3/include/csg/: gui_glfw3.h
lib/csg_gui_glfw3/src/: c_adapter_ops_glfw3.c  c_nuklear_impl.c
lib/csg_image/: CMakeLists.txt
lib/csg_image/include/csg/: image.h
lib/csg_image/src/: c_image.c  c_image.c.autosave  c_stb_image_impl.c
lib/csg_shader/: CMakeLists.txt
lib/csg_shader/include/csg/: shader.h
lib/csg_shader/src/: c_shader_collection.c
lib/csg_wavefront/: CMakeLists.txt
lib/csg_wavefront/include/csg/: wavefront.h
lib/csg_wavefront/src/: c_tinyobj_loader_impl.c  c_wavefront.c
lib/include/csg/: animation.h  camera.h  csg.h  drawable.h  geometry.h  material.h  node.h  transform.h  types.h  util.h  viewport.h
lib/src/: c_animation.c  c_camera.c  c_drawable.c  c_geometry.c  c_init.c  c_malloc.c  c_material.c  c_node.c  c_transform.c  c_viewport.c  csg_internal.h
test/: CMakeLists.txt  camera_control.c  glfw3_adapter_ops.c  nuklear.h  test1.c  test2.c  test3.c  test4.c  test4_ui.c  test4_ui.h  test5.c  test6.c  test7.c  test8.c
test/contrib/nuklear/: nuklear_impl.c
